--- a/web/.env.example
+++ b/web/.env.example
@@ -1,58 +1,217 @@
-APP_NAME=Laravel
+#########################################
+#       КОНФИГУРАЦИЯ ПРИЛОЖЕНИЯ         #
+#########################################
+
+# Документация
+# https://github.com/russsiq/laravel-docs-ru/blob/9.x/docs/configuration.md
+
+# Название приложения
+APP_NAME="Price List"
+# Среда приложения
 APP_ENV=local
-APP_KEY=
+# Ключ шифрования
+APP_KEY=base64:WyStHgxu1mG0XV7PoFEO17vOFrdQYO111pEewcgvAPA=
+# Режим отладки приложения
 APP_DEBUG=true
+# URL-адрес приложения
 APP_URL=http://localhost
+# Локаль приложения
+APP_LOCALE=ru
+# Резервная локаль приложения
+APP_FALLBACK_LOCALE=en
 
-LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+####################################################
+#       КОНФИГУРАЦИЯ ФАЙЛОВОГО ХРАНИЛИЩА S3        #
+####################################################
 
+# Документация
+# https://aws.amazon.com/ru/?nc2=h_lg
+
+# Идентификатор файловой системы s3
+AWS_ACCESS_KEY_ID=
+# Сикретный ключ файловой системы s3
+AWS_SECRET_ACCESS_KEY=
+# Регион сервера файловой системы s3
+AWS_DEFAULT_REGION=us-east-1
+# Имя корзины файловой системы s3
+AWS_BUCKET=
+# Использовать стиль конечных точек файловой системы s3
+AWS_USE_PATH_STYLE_ENDPOINT=false
+
+################################################
+#       КОНФИГУРАЦИЯ ТРАСНЛЯЦИИ СОБЫТИЙ        #
+################################################
+
+# Документация
+# https://github.com/russsiq/laravel-docs-ru/blob/9.x/docs/broadcasting.md
+
+# Транслятор событий по умолчанию
+BROADCAST_DRIVER=log
+
+###############################################
+#       КОНФИГУРАЦИЯ КОНФИГУРАЦИЯ КЕША        #
+###############################################
+
+# Документация
+# https://github.com/russsiq/laravel-docs-ru/blob/9.x/docs/cache.md
+
+# Хранилище кэша по умолчанию
+CACHE_DRIVER=file
+# Время хранения кеша по умолчанию (в секундах)
+CACHE_KEEP=3600
+
+#########################################
+#       КОНФИГУРАЦИЯ БАЗЫ ДАННЫХ        #
+#########################################
+
+# Документация
+# https://github.com/russsiq/laravel-docs-ru/blob/9.x/docs/database.md#configuration
+
+# Имя подключения к базе данных по умолчанию
 DB_CONNECTION=mysql
+# Хост базы данных
 DB_HOST=127.0.0.1
+# Порт базы данных
 DB_PORT=3306
-DB_DATABASE=laravel
+# Имя базы данных
+DB_DATABASE=price
+# Имя пользователя базы данных
 DB_USERNAME=root
+# Пароль пользователя базы данных
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
+#################################################
+#       КОНФИГУРАЦИЯ ФАЙЛОВОГО ХРАНИЛИЩА        #
+#################################################
 
+# Документация
+# https://github.com/russsiq/laravel-docs-ru/blob/9.x/docs/filesystem.md
+
+# Диск файловой системы по умолчанию
+FILESYSTEM_DISK=local
+
+############################################
+#           КОНФИГУРАЦИЯ ШАБЛОНА           #
+############################################
+
+# Заголовок страницы
+HEAD_TITLE="Прайс лист продукции"
+# Ключевые слова страницы https://ru.wikipedia.org/wiki/Метатеги#Keywords 
+HEAD_KEYWORDS=""
+# Описание страницы https://ru.wikipedia.org/wiki/Метатеги#Description 
+HEAD_DESCRIPTION=""
+# Автор страницы https://ru.wikipedia.org/wiki/Метатеги#Author_и_Copyright 
+HEAD_AUTHOR="Роголев Дмитрий Александрович"
+
+#############################################
+#   КОНФИГУРАЦИЯ ИДЕНТИФИКАТОРОВ ШАБЛОНА    #
+#############################################
+
+# Префикс идентификатора
+ID_PREFIX=id_
+# Длина идентификатора без префикса
+ID_LENGTH=40
+
+#########################################
+#       КОНФИГУРАЦИЯ ЛОГИРОВАНИЯ        #
+#########################################
+
+# Документация
+# https://github.com/russsiq/laravel-docs-ru/blob/9.x/docs/logging.md
+
+# Канал логирования по умолчанию
+LOG_CHANNEL=stack
+# Канал журнала устареваний
+LOG_DEPRECATIONS_CHANNEL=null
+# Минимальный уровень сообщений, который должен быть зарегистрирован каналом
+LOG_LEVEL=debug
+
+################################################
+#       КОНФИГУРАЦИЯ ПОЧТОВОЙ ПРОГРАММЫ        #
+################################################
+
+# Документация
+# https://github.com/russsiq/laravel-docs-ru/blob/9.x/docs/mail.md
+
+# Почтовая программа по умолчанию
+MAIL_MAILER=smtp
+# Хост почтовой программы
+MAIL_HOST=mailhog
+# Порт почтовой программы
+MAIL_PORT=1025
+# Имя пользователя почтовой программы
+MAIL_USERNAME=null
+# Пароль пользователя почтовой программы
+MAIL_PASSWORD=null
+# Шифрование писем
+MAIL_ENCRYPTION=null
+# Глобальный почтовый адрес отправителя
+MAIL_FROM_ADDRESS="hello@example.com"
+# Глобальное имя отправителя
+MAIL_FROM_NAME="${APP_NAME}"
+
+#######################################
+#       КОНФИГУРАЦИЯ MEMCACHED        #
+#######################################
+
+# Хост Memcached
 MEMCACHED_HOST=127.0.0.1
+
+#############################################
+#       КОНФИГУРАЦИЯ СОЕДИНЕНИЯ PUSHER      #
+#          ДЛЯ ТРАНСЛЯТОРА СОБЫТИЙ          #
+#############################################
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=mt1
+
+######################################
+#       КОНФИГУРАЦИЯ ОЧЕРЕДЕЙ        #
+######################################
+
+# Документация
+# https://github.com/russsiq/laravel-docs-ru/blob/9.x/docs/queues.md
+
+# Имя подключения к очереди по умолчанию
+QUEUE_CONNECTION=database
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+###############################################
+#       КОНФИГУРАЦИЯ ПОИСКА ПО МОДЕЛЯМ        #
+###############################################
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+# Документация
+# https://github.com/russsiq/laravel-docs-ru/blob/9.x/docs/scout.md
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
+# Поисковая система по умолчанию
+SCOUT_DRIVER=database
+# Префикс индекса
+SCOUT_PREFIX=
+# Синхронизация данных очереди
+SCOUT_QUEUE=1
+# Идентифицировать Пользователя
+SCOUT_IDENTIFY=0
+
+####################################
+#       КОНФИГУРАЦИЯ СЕССИЙ        #
+####################################
+
+# Документация
+# https://github.com/russsiq/laravel-docs-ru/blob/9.x/docs/session.md
+
+# Драйвер сеанса по умолчанию
+SESSION_DRIVER=file
+# Время жизни сеанса (в минутах)
+SESSION_LIFETIME=120
+
+#################################
+#       КОНФИГУРАЦИЯ VITE       #
+#################################
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-VITE_PUSHER_HOST="${PUSHER_HOST}"
-VITE_PUSHER_PORT="${PUSHER_PORT}"
-VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
