--- a/web/package.json
+++ b/web/package.json
@@ -9,8 +9,13 @@
     "dev": "vite"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^3.2.0",
+    "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "jquery": "^3.6.1",
+    "vue": "^3.2.41",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
